<resources>
    <string name="app_name">GameBase</string>
    <string name="btnNewsTxt">News Feed</string>
    <string name="btnSearchTxt">Search</string>
    <string name="btnBrowseText">Browse</string>
    <string name="btnSettingTxt">Settings</string>
    <string name="btnHelpText">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
